tests/js_error/source_locations/expression/yield_star/next_result_get_named_property_done_throws.exp
Error: 
  at get done (tests/js_error/source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:8:19)
  at generator (tests/js_error/source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:20:3)
  at next (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:24:1)
